feat: create password change route and add it to swagger
