# src/config/swagger.yaml
@@ -85,3 +85,28 @@ paths:
       responses:
         '201':
           description: send password recovery link
+  /password/recovery:
+    post:
+      tags:
+        - Users  
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: 
+              type: 'object'
+              properties:
+                  password: 
+                    type: string
+                  repeatPassword:
+                    type: string
+                  hash:
+                    type: string
+                   
+            example:
+              password: nixena16
+              repeatPassword: nixena16
+              hash: 45c8866eea81385afa7074306c9e7aed670cbe3c638aefd42ad0689a7b3294e0aa48d44536dd2f2f2fac669480ec41df
+      responses:
+        '200':
+          description: password changed!
